[gd_scene load_steps=4 format=2]

[ext_resource path="res://textures/bgarmor_logo_name.png" type="Texture" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/welcome.gd" type="Script" id=3]

[node name="Welcome" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialogNew" type="FileDialog" parent="."]
anchor_left = 0.45
anchor_top = 0.25
anchor_right = 0.55
anchor_bottom = 0.75
margin_left = -247.5
margin_top = -69.0
margin_right = 247.5
margin_bottom = 69.0
popup_exclusive = true
window_title = "Open a Directory"
resizable = true
mode = 2
access = 2
current_dir = "/home/shared/Downloads/Godot/projects/BGArmor"
current_path = "/home/shared/Downloads/Godot/projects/BGArmor/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRectLogo" type="TextureRect" parent="Panel"]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.45
margin_top = -1.0
margin_bottom = -1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainerL" type="VBoxContainer" parent="Panel"]
anchor_left = 0.05
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.95
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelProject" type="Label" parent="Panel/VBoxContainerL"]
margin_right = 432.0
margin_bottom = 22.0
text = "Project:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonNew" type="Button" parent="Panel/VBoxContainerL"]
margin_top = 26.0
margin_right = 432.0
margin_bottom = 48.0
text = "New Project"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonOpen" type="Button" parent="Panel/VBoxContainerL"]
margin_top = 52.0
margin_right = 432.0
margin_bottom = 74.0
text = "Open Project"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelLinks" type="Label" parent="Panel/VBoxContainerL"]
margin_top = 78.0
margin_right = 432.0
margin_bottom = 117.0
text = "
Links:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonDocs" type="Button" parent="Panel/VBoxContainerL"]
margin_top = 121.0
margin_right = 432.0
margin_bottom = 143.0
text = "Documentation"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSource" type="Button" parent="Panel/VBoxContainerL"]
margin_top = 147.0
margin_right = 432.0
margin_bottom = 169.0
text = "Source Code"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainerR" type="VBoxContainer" parent="Panel"]
anchor_left = 0.55
anchor_top = 0.5
anchor_right = 0.95
anchor_bottom = 0.95
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelRecent" type="Label" parent="Panel/VBoxContainerR"]
margin_right = 384.0
margin_bottom = 22.0
text = "Recent:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonClearRecent" type="Button" parent="Panel/VBoxContainerR"]
margin_top = 26.0
margin_right = 384.0
margin_bottom = 48.0
text = "Clear list"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Panel/VBoxContainerL/ButtonNew" to="." method="_on_ButtonNew_pressed"]
[connection signal="pressed" from="Panel/VBoxContainerL/ButtonDocs" to="." method="_on_ButtonDocs_pressed"]
[connection signal="pressed" from="Panel/VBoxContainerL/ButtonSource" to="." method="_on_ButtonSource_pressed"]
